NFDIV-5102 Add Validator for CaseTask